@@ -1,5 +1,6 @@
 Changelog for current version:
     * Show the error texts from twitter when displaying an error. Should make it easier to understand things like why DMs fail.
+	* Don't retreive old tweets when rejoining a search. Behaviour is now similar to a regular timeline.
 
 Changelog for 0.6.3:
     * Fix make install target
